# taxlien-nft

./: ARCHITECTURE.md  README.md  canister_ids.json  custom_domains.txt  dfx.json  mops.toml  package-lock.json  package.json  package.json.bak
HACK_BECAUSE_OF_ALLOW_JS/nft_taxlien_frontend/src/: App.js
HACK_BECAUSE_OF_ALLOW_JS/nft_wallet_frontend/src/: App.js  AuthWarning.js  CardDisplay.js  Header.js  InternetIdentity.js  TokenTransfer.js  Transfer.js  test.js
actions/: 0_all.sh  2_deploy.sh  3_info.sh  4_mint.sh  4_mint4.sh  5_supply_info.sh  deploy.sh  deploy_canister.sh  deploy_canister_ic.sh  deploy_frontend.sh  redeem.sh  topup.sh
api/: package.json
api/src/: index.ts
api/src/routes/: nft.routes.ts
ethereum/: hardhat.config.ts  package.json
ethereum/contracts/: TaxLienMarket.sol  TaxLienNFT.sol
ethereum/scripts/: deploy.ts
frontend/: next.config.js  package.json  tailwind.config.ts
icp/: dfx.json  mops.toml
legacy/: canister_ids.json  links.txt  mops.toml  package-lock.json  package.json
legacy/actions/: 0_all.sh  1_admin.sh  2_deploy.sh  deploy_canister.sh  deploy_ic.sh  redeem.sh  start.sh
scripts/: deploy-all.sh
solana/: Anchor.toml  Cargo.toml
solana/programs/taxlien_nft/: Cargo.toml
solana/programs/taxlien_nft/src/: lib.rs
src/business_backend/: main.mo
src/nft_taxlien_backend/: main.mo
src/nft_wallet_frontend/: package-lock.json  package.json  package.json.bak2
taxlien/: 0_all.sh  4_mint.sh  deploy_ic.sh  deploy_playground.sh  network_ic.sh  network_local.sh  text
taxlien/initial_state/: icrc7.mo
(+33 files in other folders)
