[package]
name = "taxlien-nft"
version = "2.0.0"
description = "Solana program for Tax Lien NFTs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "taxlien_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

